# STM

./: .gitignore
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: F_103RBT6.1734142415719.pdom  F_103RBT6.language.settings.xml  test_code.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/.projects/F_103RBT6/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/F_103RBT6/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/F_103RBT6/.indexes/af/: history.index
.metadata/.plugins/org.eclipse.core.resources/.root/: 5.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2024/12/50/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
F_103RBT6/: .cproject  .mxproject  CMakeLists.txt  F_103RBT6.ioc
F_103RBT6/Core/Inc/: FreeRTOSConfig.h
Nucleo_F103RBT6/: .cproject  .project  CMakeLists.txt  Nucleo_F103RBT6 Debug.launch  Nucleo_F103RBT6.ioc  build_and_flash.sh  build_project.sh  toolchain-arm-none-eabi.cmake
Nucleo_F103RBT6/Core/Src/: main.c
STMF103RBT6/: .cproject  .mxproject  .project  CMakeLists.txt  STMF103RBT6 Debug.launch  STMF103RBT6.ioc  build_project.sh
STMF103RBT6/Core/Inc/: FreeRTOSConfig.h
STMF103RBT6/Core/Src/: main.c
resources/controllers/: CMakeLists.txt
resources/controllers/documentation/: pid.txt  pid_controller.txt
resources/controllers/include/controllers/: pid_controller.hpp  state_feedback_controller.hpp
resources/controllers/scripts/: test_pid.m  test_sf_controller.m
resources/controllers/src/: pid_controller.cpp
resources/filters/: CMakeLists.txt
resources/filters/documentation/: tustin_first_order_IIR_filter.txt
resources/filters/include/filters/: first_order_lowpass_iir_filter.hpp
resources/filters/scripts/: test_first_order_iir_lpf.m
resources/filters/src/: first_order_lowpass_iir_filter.cpp
resources/foc_current_controller/: CMakeLists.txt
resources/foc_current_controller/include/foc_current_controller/: foc_current_controller.hpp  foc_current_controller_definitions.hpp  foc_current_controller_parameters.hpp
resources/foc_current_controller/src/: foc_current_controller.cpp
resources/message_system/: CMakeLists.txt
resources/message_system/include/message_system/: client.hpp  message_distributer.hpp  message_distributer_prims.hpp  publisher.hpp  server.hpp  subscriber.hpp
resources/message_system/src/: message_distributer.cpp  test.cpp
resources/node_system/: CMakeLists.txt
resources/node_system/include/node_system/: node.hpp
resources/node_system/src/: node.cpp  test.cpp
resources/observers/: CMakeLists.txt  build_code.sh
resources/observers/include/observers/: extended_kalman_filter.hpp
resources/observers/src/: test.cpp
resources/transforms/: CMakeLists.txt
resources/transforms/include/transforms/: clark_transformer.hpp  park_transformer.hpp  transforms_prims.hpp
resources/transforms/src/: clark_transformer.cpp  park_transformer.cpp  test.cpp
resources/voltage_modulators/: CMakeLists.txt
resources/voltage_modulators/include/voltage_modulators/: sinusoidal_modulator.hpp  six_step_modulator.hpp  space_vector_modulator.hpp
resources/voltage_modulators/scripts/: test_space_vector_modulation.m
resources/voltage_modulators/src/: sinusoidal_modulator.cpp  six_step_modulator.cpp  space_vector_modulator.cpp  test.cpp
